<resources>
    <string name="app_name">Flip Shop</string>
    <string name="title_activity_d_a_s_h_b_o_a_r_d_a_c_t_i_v_i_t_y">DASHBOARDACTIVITY</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FLIP SHOP </string>
    <string name="nav_header_subtitle">Life is too short to wear boring clothes</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string-array name="categorynames">
        <item>MOBILES</item>
        <item>LAPTOPS</item>
        <item>FURNITURE</item>
        <item>TOY STORE</item>
        <item>HEALTH CARE</item>
        <item>CLOTHES</item>
        <item>GROCERY</item>
        <item>BOOKS</item>
        <item>COSMETICS</item>
        <item>SPORTS</item>

    </string-array>
    <string name="menu_home">FLIP SHOP </string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_wishlist">Wishlist</string>
    <string name="menu_shopbycategory">Shop by Category</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_profile">Profile</string>
    <string name="home_second">Home Second</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="admob_id">ca-app-pub-1949919956019180/4503238672</string>
    <string name="admob_id2">ca-app-pub-3940256099942544/6300978111</string>
    <string name="search">Search</string>
    <string name="choose_your_location">CHOOSE YOUR LOCATION</string>
    <string name="search_items">Search Items</string>
    <string name="in_stock">IN STOCK</string>
    <string name="out_of_stock">OUT OF STOCK</string>
    <string name="redmi_note_9_pro">REDMI NOTE 9 PRO</string>
    <string name="see_more_like_this">SEE MORE LIKE THIS</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="order_details">ORDER DETAILS</string>
    <string name="enter_your_address">Enter your address</string>


    <string name="full_name">Full Name</string>
    <string name="display_name">Display Name</string>
    <string name="settings">Settings</string>
    <string name="mobile_no">Mobile no.</string>
    <string name="save_changes">Save Changes</string>
    <string name="logout">Log Out</string>
    <string name="life_is_too_short_to_wear_boring_clothes">Life is too short to wear boring clothes</string>
    <string name="flip_shop">Flip Shop</string>
</resources>
