<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.flipshop.ui.fragments.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >

    </fragment>
    <fragment
        android:id="@+id/nav_shopbycategory"
        android:name="com.example.flipshop.ui.fragments.ShopbycategoryFragment"
        android:label="@string/menu_shopbycategory"
        tools:layout="@layout/fragment_shopbycategory" />


    <fragment
        android:id="@+id/nav_orders"
        android:name="com.example.flipshop.ui.fragments.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.flipshop.ui.fragments.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_wishlist"
        android:name="com.example.flipshop.ui.fragments.WishlistFragment"
        android:label="@string/menu_wishlist"
        tools:layout="@layout/fragment_wishlist"
        />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.flipshop.ui.fragments.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile"
        />
</navigation>
