<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HomeFragment">

    <RelativeLayout
        android:id="@+id/relLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:visibility="gone">

        <AutoCompleteTextView
            android:id="@+id/actv"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/search_bg"
            android:drawableStart="@drawable/ic_search_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/search"
            android:paddingStart="10dp"

            />

        <Button
            android:id="@+id/mic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="7dp"
            android:background="@drawable/ic_mic_black_24dp"
            android:gravity="center" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/locationlayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/relLayout"

        android:background="#78BDF4">

        <ImageButton
            android:id="@+id/locationicon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:background="@drawable/placeholder" />


        <TextView
            android:id="@+id/locationname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:ellipsize="end"
            android:gravity="center"
            android:hint="@string/choose_your_location"
            android:maxLength="30"
            android:maxLines="1"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/offer_card"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/locationlayout">

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/imageSlider"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.denzcoskun.imageslider.ImageSlider>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/offer_card"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <FrameLayout
        android:id="@+id/ads_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recyclerView"
        android:layout_marginTop="20dp" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_id" />
</RelativeLayout>